# enformer_fine_tuning

./: .gitignore  README.md  environment.yml  install_reqs.sh  pyproject.toml  requirements.txt  setup.py
code/: datasets.py  eval_enformer_across_genes.py  eval_enformer_gtex.py  eval_performer_across_genes.py  eval_performer_on_other_genes.py  gen_input_grad.py  ism_performer.py  new_attr.py  pl_models.py  select_drivers_enformer.py  select_drivers_performer.py  slurm_train_gtex.sh  tmp_eval_196kb_multigene.py  tmp_eval_196kb_multigene_random_weights.py  train_gtex.py  train_gtex_all_genes.py  train_gtex_downsample_donors.py  train_gtex_random_weights.py  train_gtex_specific_sg.py  train_gtex_tpm.py  train_oligogene.py  train_ref_avg.py  train_rosmap.py  train_training_sweep.py
code/configs/: PPIF_196kb_blood_config.yaml  blood_config.yaml  blood_config_all_genes.yaml  blood_config_all_genes_resume.yaml  blood_config_all_genes_track_valid_genes.yaml  (+9 more)
data/: Enformer_genomic_regions_TSSCenteredGenes_FixedOverlapRemoval.csv  duplicated_samples_list.txt
performer/: __init__.py  datasets.py  eval_enformer_across_genes.py  eval_enformer_gtex.py  eval_enformer_rosmap.py  eval_performer_across_genes.py  eval_performer_on_other_genes.py  ism_enformer.py  ism_performer.py  pl_models.py  select_drivers_enformer.py  select_drivers_performer.py  tmp_eval_196kb_multigene.py  tmp_eval_all_gene.py  train_gtex.py  train_gtex_all_genes.py  train_gtex_downsample_donors.py  train_gtex_sg_on_test_genes.py  train_gtex_specific_sg.py  train_oligogene.py  train_rosmap.py
test/: test.py
(+674 files in other folders)
